<resources>
    <string name="app_name">Weather Forecast</string>
    <string name="title_city">City</string>
    <string name="title_settings">Settings</string>
    <string name="update_database">Update database</string>
    <string-array name="cities">
        <item> Amur </item>
        <item> Arkhangelsk </item>    
        <item> Astrakhan </item>        
        <item> Belgorod </item>        
        <item> Bryansk </item>        
        <item> Vladimir </item>        
        <item> Volgograd </item>        
        <item> Vologda </item>        
        <item> Voronezh </item>        
        <item> Ivanovo </item>        
        <item> Irkutsk </item>        
        <item> Kaliningrad </item>        
        <item> Kamchatka </item>        
        <item> Kemerovo </item>        
        <item> Krasnodar </item>        
        <item> Krasnoyarsk </item>        
        <item> Kursk </item>        
        <item> St. Petersburg </item>        
        <item> Lipetsk </item>        
        <item> Magadan </item>        
        <item> Moscow </item>        
        <item> Murmansk </item>        
        <item> Novosibirsk </item>        
        <item> Omsk </item>        
        <item> Orenburg </item>        
        <item> Penza </item>        
        <item> Primorsk </item>        
        <item> Pskov </item>        
        <item> Rostov on Don </item>        
        <item> Ryazan </item>        
        <item> Samara </item>        
        <item> Saratov </item>        
        <item> North Ossetia </item>        
        <item> Smolensk </item>        
        <item> Stavropol </item>        
        <item> Taganrog </item>        
        <item> Tambov </item>        
        <item> Tomsk </item>        
        <item> Tula </item>        
        <item> Tyumen </item>        
        <item> Ulyanovsk </item>        
        <item> Khabarovsk </item>        
        <item> Khanty-Mansiysk </item>        
        <item> Chelyabinsk </item>        
        <item> Yaroslavl </item>
    </string-array>
    <string-array name="update_cities">
        <item>Amur, RU</item>
        <item>Arkhangelsk, RU</item>    
        <item>Astrakhan, RU</item>        
        <item>Belgorod, RU</item>        
        <item>Bryansk, RU</item>        
        <item>Vladimir, RU</item>        
        <item>Volgograd, RU</item>        
        <item>Vologda, RU</item>        
        <item>Voronezh, RU</item>        
        <item>Ivanovo, RU</item>        
        <item>Irkutsk, RU</item>        
        <item>Kaliningrad, RU</item>        
        <item>Kamchatka, RU</item>        
        <item>Kemerovo, RU</item>        
        <item>Krasnodar, RU</item>        
        <item>Krasnoyarsk, RU</item>        
        <item>Kursk, RU</item>        
        <item>Saint Petersburg, RU</item>        
        <item>Lipetsk, RU</item>        
        <item>Magadan, RU</item>        
        <item>Moscow, RU</item>        
        <item>Murmansk, RU</item>        
        <item>Novosibirsk, RU</item>        
        <item>Omsk, RU</item>        
        <item>Orenburg, RU</item>        
        <item>Penza, RU</item>        
        <item>Primorsk, RU</item>        
        <item>Pskov, RU</item>        
        <item>Rostov-on-Don, RU</item>        
        <item>Ryazan, RU</item>        
        <item>Samara, RU</item>        
        <item>Saratov, RU</item>        
        <item>North Ossetia, RU</item>        
        <item>Smolensk, RU</item>        
        <item>Stavropol, RU</item>        
        <item>Taganrog, RU</item>        
        <item>Tambov, RU</item>        
        <item>Tomsk, RU</item>        
        <item>Tula, RU</item>        
        <item>Tyumen, RU</item>        
        <item>Ulyanovsk, RU</item>        
        <item>Khabarovsk, RU</item>        
        <item>Khanty-Mansiysk, RU</item>        
        <item>Chelyabinsk, RU</item>        
        <item>Yaroslavl, RU</item>
    </string-array>
    <string name="city_show">City :  </string>
    <string name="temp_show">Temperature :  </string>
    <string name="wind_speed_show">Wind speed :  </string>
    <string name="pressure_show">Pressure :  </string>
    <string name="humidity_show">Humidity :  </string>
</resources>